--- a/CSS/Exams/Exam 2014/Group 2/Task 2/style.css
+++ b/CSS/Exams/Exam 2014/Group 2/Task 2/style.css
@@ -1,88 +1,87 @@
-body {
+html,
+body,
+div,
+h1,
+ul,
+li,
+p,
+a,
+img,
+span {
     margin: 0;
+    padding: 0;
 }
 
-#wrapper {
-    width: 960px;
-    margin: 0 auto;
+body {
+    font-family: Helvetica, Arial, 'DejaVu Sans', 'Liberation Sans', Freesans, sans-serif;
     font-size: 16px;
-    font-family: Helvetica, Arial, 'DejaVu Sans', 'Liberation Sans', Freesans, sans-serif;;
 }
+
+    body #wrapper {
+        width: 960px;
+    }
 
 .menu {
     list-style-type: none;
-    margin: 0;
-    padding: 0;
+    margin-top: 5px;
 }
 
-.menu li {
-    display: inline-block;
-    width: 180px;
-    height: 180px;
-    border: 20px solid #808080;
-    background: rgba(114, 114, 114, 1);
-    background: -moz-linear-gradient(top, rgba(114, 114, 114, 1) 0%, rgba(255, 255, 255, 0.83) 100%);
-    background: -webkit-gradient(left top, left bottom, color-stop(0%, rgba(114, 114, 114, 1)), color-stop(100%, rgba(255, 255, 255, 0.83)));
-    background: -webkit-linear-gradient(top, rgba(114, 114, 114, 1) 0%, rgba(255, 255, 255, 0.83) 100%);
-    background: -o-linear-gradient(top, rgba(114, 114, 114, 1) 0%, rgba(255, 255, 255, 0.83) 100%);
-    background: -ms-linear-gradient(top, rgba(114, 114, 114, 1) 0%, rgba(255, 255, 255, 0.83) 100%);
-    background: linear-gradient(to bottom, rgba(114, 114, 114, 1) 0%, rgba(255, 255, 255, 0.83) 100%);
-    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#727272', endColorstr='#ffffff', GradientType=0);
-    float: left;
-    margin-right: 5px;
-}
+    .menu li {
+        margin-left: 5px;
+        width: 180px;
+        height: 180px;
+        float: left;
+        text-align: center;
+        border: 20px solid grey;
+        background: #727272; /* Old browsers */
+        background: -moz-linear-gradient(top, #727272 0%, #ffffff 100%); /* FF3.6+ */
+        background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#727272), color-stop(100%,#ffffff)); /* Chrome,Safari4+ */
+        background: -webkit-linear-gradient(top, #727272 0%,#ffffff 100%); /* Chrome10+,Safari5.1+ */
+        background: -o-linear-gradient(top, #727272 0%,#ffffff 100%); /* Opera 11.10+ */
+        background: -ms-linear-gradient(top, #727272 0%,#ffffff 100%); /* IE10+ */
+        background: linear-gradient(to bottom, #727272 0%,#ffffff 100%); /* W3C */
+        filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#727272', endColorstr='#ffffff',GradientType=0 ); /* IE6-9 */
+    }
 
-.menu .click-here {
-    display: none;
-}
+        .menu li:hover {
+            border: 20px solid #454545;
+            background: grey;
+        }
 
-.menu li h3, p {
-    text-align: center;
-    margin: 0;
-}
+            .menu li:hover h3 {
+                text-decoration: underline;
+            }
 
-.menu li h3 {
-    margin-top: 10px;
-    margin-bottom: 5px;
-    color: #FFFFEA;
-}
+            .menu li:hover .subtitle {
+                display: none;
+            }
 
-.menu .image-container {
-    margin: 0;
-}
+            .menu li:hover .click-here {
+                display: block;
+            }
 
-.menu .image-container img {
-    width: 120px;
-    margin-left: 30px;
-    margin-bottom: 10px;
-    border-radius: 20px;
-}
+        .menu li h3 {
+            color: white;
+            margin: 5px auto;
+        }
 
-.menu li:hover {
-    border-color: #454545;
-    background: #808080;
-    margin: 0;
-    padding: 0;
-    display: block;
-}
+        .menu li .subtitle {
+            margin-top: 10px;
+        }
 
-.menu li:hover .image-container img {
-    width: 140px;
-    margin-right: 5px;
-    margin-left: 20px;
-    margin-bottom: 0;
-}
+        .menu li .click-here {
+            display: none;
+            color: white;
+            text-transform: uppercase;
+        }
 
-.menu li:hover h3 {
-    text-decoration: underline;
-}
+        .menu li .image-container img {
+            width: 120px;
+            height: 100px;
+            border-radius: 20px;
+        }
 
-.menu li:hover .subtitle {
-    display: none;
-}
-
-.menu li:hover .click-here {
-    display: block;
-    text-transform: uppercase;
-    color: #FFFFEA;
-}
+        .menu li:hover .image-container img {
+            width: 140px;
+            height: 110px;
+        }
