--- a/JavaScript Stuff/Social Network Lab App/views/login.html
+++ b/JavaScript Stuff/Social Network Lab App/views/login.html
@@ -1,7 +1,8 @@
 <div class="row">
     <form class="login form-horizontal col-md-6">
         <fieldset>
-            <legend><h2>Login</h2></legend>
+            <legend>
+                <h2>Login</h2></legend>
             <div class="form-group">
                 <label for="login-username" class="col-lg-4 control-label">Username</label>
                 <div class="col-lg-8">
@@ -19,7 +20,7 @@
             <div class="col-lg-10 col-lg-offset-2">
                 <button type="button" class="btn btn-lg btn-primary">Login</button>
                 <span>or</span>
-                <a href="#">Register</a>
+                <a href="#/register">Register</a>
             </div>
         </div>
     </form>
