--- a/JavaScript Stuff/Social Network Lab App/views/register.html
+++ b/JavaScript Stuff/Social Network Lab App/views/register.html
@@ -1,7 +1,8 @@
 <div class="row">
     <form class="register form-horizontal col-lg-12">
         <fieldset>
-            <legend><h2>Create a new account</h2></legend>
+            <legend>
+                <h2>Create a new account</h2></legend>
             <div class="col-lg-9 form-info">
                 <div class="form-group">
                     <label for="reg-username" class="col-lg-3 control-label">Username:</label>
@@ -48,21 +49,21 @@
 
             <div class="col-lg-3 picture-upload">
                 <div class="form-group">
-                    <img class="thumbnail picture-preview"/>
+                    <img class="thumbnail picture-preview" />
                 </div>
                 <div class="form-group">
                     <p class="picture-name"></p>
                     <button type="button" id="upload-file-button" class="btn btn-md btn-info">Upload</button>
-                    <input type="file" id="picture"/>
+                    <input type="file" id="picture" />
                     <p>Size limit: 128KB</p>
                 </div>
             </div>
 
             <div class="form-group col-lg-12">
                 <div class="col-lg-10 col-lg-offset-2">
-                    <button type="button" class="btn btn-lg btn-primary">Register</button>
+                    <button type="button" class="btn btn-lg btn-primary" id="btn-register">Register</button>
                     <span>or</span>
-                    <a href="#">Login</a>
+                    <a href="#/login">Login</a>
                 </div>
             </div>
         </fieldset>
